language/move-lang/tests/move_check/translated_ir_tests/commands/else_moves_if_doesnt.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/else_moves_if_doesnt.move:3:30 ───
   │
 3 │     let y = if (true) 0 else move x; y;
   │                              ------ The local might not have a value due to this position. The local must be assigned a value before being used
 4 │     0x0::Transaction::assert(x == 0, 42);
   │                              ^ Invalid usage of local 'x'
   │

